--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,15 +1,16 @@
 <footer class="footer">
   <div class="footer__inner">
     {{ if $.Site.Copyright }}
-      <div class="copyright copyright--user">
-        <span>{{ $.Site.Copyright | safeHTML }}</span>
-    {{ else }}
+    <div class="copyright copyright--user">
+      <span>{{ $.Site.Copyright | safeHTML }}</span>
+      {{ else }}
       <div class="copyright">
         <span>© {{ now.Year }} Powered by <a href="https://gohugo.io">Hugo</a></span>
-    {{ end }}
-      <span>:: <a href="https://github.com/panr/hugo-theme-terminal" target="_blank">Theme</a> made by <a href="https://github.com/panr" target="_blank">panr</a></span>
+        {{ end }}
+        <span>:: <a href="https://github.com/sonictt1/hugo-theme-terminal-sonictt1">Theme</a> forked from <a
+            href="https://github.com/panr/hugo-theme-terminal" target="_blank">Terminal</a></span>
       </div>
-  </div>
+    </div>
 </footer>
 
 {{ $menu := resources.Get "js/menu.js" | js.Build }}
