--- a/layouts/partials/posts_pagination.html
+++ b/layouts/partials/posts_pagination.html
@@ -7,7 +7,7 @@
   <div class="pagination__buttons">
     {{ if .NextInSection }}
       <a href="{{ .NextInSection.Permalink }}" class="button inline prev">
-        &lt; [<span class="button__text">{{ .NextInSection.Title }}</span>]
+        {{ .NextInSection.Title }}
       </a>
     {{ end }}
     {{ if and .NextInSection .PrevInSection }}
@@ -15,7 +15,7 @@
     {{ end }}
     {{ if .PrevInSection }}
       <a href="{{ .PrevInSection.Permalink }}" class="button inline next">
-         [<span class="button__text">{{ .PrevInSection.Title }}</span>] &gt;
+        {{ .PrevInSection.Title }}
       </a>
     {{ end }}
   </div>
