--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -12,8 +12,10 @@ a.button {
   align-items: center;
   justify-content: center;
   padding: 8px 18px;
+  margin: 5px 0;
   text-decoration: none;
   text-align: center;
+  border-radius: 8;
   font: inherit;
   font-weight: bold;
   appearance: none;
@@ -40,13 +42,13 @@ button.link,
 .button.link,
 a.button.link {
   background: none;
-  font-size: var(--font-size);
+  font-size: 1rem;
 }
 
 button.small,
 .button.small,
 a.button.small {
-  font-size: calc(var(--font-size) * 0.8);
+  font-size: 0.8rem;
 }
 
 button.wide,
@@ -71,6 +73,22 @@ a.button.inline:hover {
   background: none;
 }
 
+a.button.inline:before {
+  content: "["
+}
+
+a.button.inline:after {
+  content: "]"
+}
+
+a.button.inline.prev:before {
+  content: "← ["
+}
+
+a.button.inline.next:after {
+  content: "] →"
+}
+
 a.read-more,
 a.read-more:hover,
 a.read-more:active {
@@ -81,4 +99,26 @@ a.read-more:active {
   padding: 0;
   max-width: 100%;
   text-decoration: none;
+}
+
+.code-toolbar {
+  margin-bottom: 20px;
+}
+
+.code-toolbar .toolbar-item a {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 3px 8px;
+  margin-bottom: 5px;
+  text-decoration: none;
+  text-align: center;
+  font-size: 13px;
+  font-weight: 500;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  appearance: none;
+  cursor: pointer;
+  outline: none;
 }
