--- a/assets/css/pagination.css
+++ b/assets/css/pagination.css
@@ -1,3 +1,4 @@
+/* _pagination.scss */
 .pagination {
   margin-top: 50px;
 }
@@ -15,7 +16,7 @@
   padding: 5px 10px;
   background: var(--background);
   color: color-mix(in srgb var(--foreground) 30%, transparent);
-  font-size: calc(var(--font-size) * 0.8);
+  font-size: 0.8rem;
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 0.1em;
@@ -53,7 +54,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  font-size: inherit;
+  font-size: 1rem;
   padding: 0;
   appearance: none;
 }
@@ -63,6 +64,10 @@
   justify-content: center;
   flex: 1;
   padding: 8px 16px;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .button__text {
@@ -77,6 +82,12 @@
 
 .prev .button__icon {
   margin-right: 8px;
+}
+
+@media (max-width: 684px) {
+  .button {
+    flex: 1;
+  }
 }
 
 @media print {
