--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -1,5 +1,6 @@
+/* _post.scss */
 .index-content {
-  margin: 25px 0;
+  margin-top: 20px;
 }
 
 .framed {
@@ -22,7 +23,7 @@
 .post {
   width: 100%;
   text-align: left;
-  padding: 30px 0;
+  padding: 40px 0;
 }
 
 .post:not(:last-of-type) {
@@ -30,9 +31,9 @@
 }
 
 .post-meta {
-  font-size: inherit;
+  font-size: 1rem;
   margin-bottom: 10px;
-  color: color-mix(in srgb, var(--foreground) 65%, transparent);
+  color: color-mix(in srgb, var(--foreground) 50%, transparent);
 }
 
 .post-meta > *:not(:first-child)::before {
@@ -48,7 +49,6 @@
   margin-bottom: 15px !important;
   padding-bottom: 15px;
   border-bottom: 3px dotted var(--accent);
-  text-decoration: none !important;
 }
 
 .post-title::after {
@@ -67,7 +67,7 @@
 .post-tags {
   display: block;
   margin-bottom: 20px;
-  font-size: inherit;
+  font-size: 1rem;
   color: var(--accent);
 }
 
@@ -76,11 +76,11 @@
 }
 
 .post-content {
-  margin-top: 25px;
+  margin-top: 30px;
 }
 
 .post-cover {
-  margin: 25px 0;
+  margin: 40px 0;
 }
 
 .post ul {
@@ -109,7 +109,6 @@
 }
 
 .hanchor {
-  position: absolute;
   color: var(--accent);
   text-decoration: none;
   margin-left: 10px;
