--- a/assets/css/terminal.css
+++ b/assets/css/terminal.css
@@ -1,3 +1,5 @@
+/* Placeholder file for your custom settings. */
+/* You can get the color scheme variables from https://panr.github.io/terminal-css/ */
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code&family=Fira+Code:wght@700&display=swap");
 
 :root {
