--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,9 +1,8 @@
 <div class="pagination">
   <div class="pagination__buttons">
     {{ if .Paginator.HasPrev }}
-      <a href="{{ .Paginator.Prev.URL }}" class="button prev">
-        <span class="button__icon">←</span>
-        <span class="button__text">{{ $.Site.Params.newerPosts | default "Newer posts" }}</span>
+      <a href="{{ .Paginator.Prev.URL }}" class="button inline prev">
+        &lt; [<span class="button__text">{{ $.Site.Params.newerPosts | default "Newer posts" }}</span>]
       </a>
     {{ end }}
     {{ if and .Paginator.HasPrev .Paginator.HasNext }}
